--- a/src/styles/TitleAndSub.css
+++ b/src/styles/TitleAndSub.css
@@ -11,3 +11,23 @@ h6#subtitle{
     color: #000;
     text-align: center;
 }
+.TitleAndSub{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+@media screen and (min-width: 394px) {
+    h6#subtitle{
+        font-size: 25px;
+        max-width: 1000px;
+        padding-bottom: 37px;
+    }
+
+    h1#Titolonissimo{
+        padding: 38px 0px 37px 0px;
+    }
+
+}
