Added funcion api and center everithing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,4 +4,8 @@
 }
 body{
   background-color: #D5DDBC;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
