--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -4,13 +4,17 @@
 }
 .Button.disabled{
     background-color: #AA9190;
+    cursor: not-allowed; 
 }
 
 .text-center{
     text-align: center;
 }
 
-
+.spacebtn{
+    margin-bottom: 20px;   
+    margin-top: 74px;
+}
 
 
 @media screen and (min-width: 394px) {
