--- a/src/styles/Joke.css
+++ b/src/styles/Joke.css
@@ -1,7 +1,14 @@
 .JokeSium{
     background-color: #ffffff;
-    max-width: 300px;
-    max-height: 100px;
+    min-width: 300px;
+    margin: 0px 47px 0px 47px;
     border:3px solid black;
     margin-top: 55px;
 }
+
+@media screen and (min-width: 394px) {
+    .JokeSium{
+        min-width: 550px;
+    }
+    
+  }
