--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,8 +7,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 body{
   background-color: #D5DDBC;
