--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,6 +1,8 @@
 .Button{
     background-color: #931F1D;
     padding: 16px 70px;
+    color: white;
+    
 }
 .Button.disabled{
     background-color: #AA9190;
