fixed the button copy

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -18,12 +18,32 @@
     margin-top: 74px;
 }
 
+.maringsott{
+    margin-bottom: 0px;
+    
+}
+
+
+
+
 
 @media screen and (min-width: 394px) {
     .Button {
         padding: 16px 158px;
         
     }
+
+    .spacebtn{
+        margin-bottom: 10px;   
+        margin-top: 74px;
+    }
+
+    .maringsott{
+        margin-bottom: 20px;
+    
+    }
+
+    
     
   }
 
